--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>FOOTBALL INPO</h1>
  <div class="social">
     <img src="instagram.png" class="ins-img" alt="Instagram">
-    <a href="https://www.instagram.com/gerrywh__?igsh=MXRicHRnc2d6MzE2NQ==" class="link">gerrywh__</a>
+    <a href="https://www.instagram.com/gerrystya__?igsh=enlyc3dpbGtmdWZ1" class="link">gerrystya__</a>
   </div>
     </div>
 
@@ -31,7 +31,7 @@ biasanya memiliki kecepatan tinggi, kemampuan menggiring bola yang baik, serta k
 lawan dan rekan setim. Dalam formasi seperti 4-3-3 atau 4-2-3-1, winger kanan berperan sebagai pemain yang membuka 
 ruang di sisi lapangan, menarik perhatian bek lawan, dan menciptakan peluang bagi striker atau gelandang serang. 
 Banyak winger modern juga memiliki kecenderungan untuk memotong ke dalam (cut inside) menggunakan kaki dominannya 
-untuk melepaskan tembakan ke gawang, contoh klasiknya bisa dilihat pada pemain seperti Mohamed Salah atau Riyad Mahrez.<i><a href="https://www.instagram.com/gerrywh__?igsh=MXRicHRnc2d6MzE2NQ==" class="link-ig" >gerrywh__</a></i>
+untuk melepaskan tembakan ke gawang, contoh klasiknya bisa dilihat pada pemain seperti Mohamed Salah atau Riyad Mahrez.<i><a href="https://www.instagram.com/gerrystya__?igsh=enlyc3dpbGtmdWZ1" class="link-ig" >gerrystya__</a></i>
 </p>
 <p class="text2">
 Selain menyerang, winger kanan juga dituntut untuk membantu pertahanan ketika tim kehilangan bola. Mereka harus 
@@ -158,7 +158,7 @@ melengkung ke pojok gawang bisa mengubah hasil akhir laga.
 </p> 
 
 <h3>8. Bukayo Saka (Arsenal) </h3>
-<img src="Bukayo-Saka-Champions-League-MOTM-1024x629.jpg" class="img-dembele" width="40%" height="50%"> <a href="https://www.instagram.com/gerrywh__?igsh=MXRicHRnc2d6MzE2NQ=="><img src="instagram.png" width="10%" height="10%" class="ins-jpg" > </a>
+<img src="Bukayo-Saka-Champions-League-MOTM-1024x629.jpg" class="img-dembele" width="40%" height="50%"> <a href="https://www.instagram.com/gerrystya__?igsh=enlyc3dpbGtmdWZ1"><img src="instagram.png" width="10%" height="10%" class="ins-jpg" > </a>
 <p class="p-yamal">Bukayo Saka adalah winger kanan asal Inggris yang bermain untuk Arsenal dan dikenal dengan konsistensinya
      yang luar biasa di Premier League. Ia memiliki gaya bermain dinamis, mengandalkan kecepatan, dribel tajam, serta kemampuan 
      membaca ruang dengan cerdas. Sebagai pemain sayap modern, Saka sering melakukan pergerakan cut-inside dari kanan menggunakan
@@ -175,6 +175,7 @@ melengkung ke pojok gawang bisa mengubah hasil akhir laga.
 </div>
 </body>
 </html>
+
 
 
 
